# afmm

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
notes/: notes.aux  notes.tex
octave/: crtest.m  dchi.m  dchitest.m  dgfunc.m  dgtest.m  fdata  gafunc.m  gfeval.m  gftest.m  gfunc.m  gfunci.m  gfuncp.m  gqfunc.m  gtest.m  hypergf.m  icheck.m  idxtest.m  legp.m  limtest.m  listips.m  mkdpinput.m  mkpoints.m  mksources.m  multinom.m  nchoosek4.m  pmtest.m  polymul.m  przval.m  qleghg.m  rctest.m  sbox.m  sctest.m  separation.m  septest.m
src/: #laplace.c#  Makefile  Makefile.am  Makefile.in  afmm-config  afmm-private.h  afmm.h  boxes.c  factorial.c  laplace.c  libafmm.la  libsub.la  libsub_la-moments.lo  moments.c  moments.lo  specfunc.c  traverse.c  traverse.lo  tree.c
tests/: etmp  field-check  gmon.out  iboxtest.m  ilist-test  log  mkboxes.m  test-derivatives
tools/: Makefile  Makefile.am  Makefile.in  afmm-direct-calc  afmm-direct-calc-float  afmm-direct-calc-float.c  afmm-direct-calc.c  afmm-direct-calc.c.in  afmm-tests  afmm-tests-float  afmm-tests-float.c  afmm-tests.c  afmm-tests.c.in  afmm-tree-calc  afmm-tree-calc-float  afmm-tree-calc-float.c  afmm-tree-calc.c  afmm-tree-calc.c.in  make-source  make-source-float
tools/.deps/: afmm-direct-calc-float.Po  afmm-direct-calc.Po  afmm-field-direct-float.Po  afmm-field-direct.Po  afmm-field-float.Po  afmm-field.Po  afmm-tests-float.Po  afmm-tests.Po  afmm-tree-calc-float.Po  afmm-tree-calc.Po
(+33 files in other folders)
